# reader3

./: .env.example  .gitignore  config.py  llm_client.py  process_book.py  prompts.py  pyproject.toml  server.py
docs/: Usage.md  mobile.md  plans.md
templates/: reader.html
